ajouts descriptifs lauriane